Bug 220319 - Export tool not allowing Maximum Dimension > 999 px
Summary: Export tool not allowing Maximum Dimension > 999 px
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-WebService-Piwigo (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-27 22:11 UTC by Ar
Modified: 2023-02-25 09:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ar 2009-12-27 22:11:35 UTC
Version:           1.0.0 RC1 (using KDE 4.3.2)
OS:                Linux
Installed from:    Ubuntu Packages

I'm using digikam 1.0.0RC1. When trying to export my photos to a Gallery2-based site, I could connect to a Gallery2 (2.3.1) site with no problem, and I see all Albums there.

My photos are all 10Mpx and before I need to rescale them before uploading. Digikam's Gallery Export has a "Maximum Dimension" feature that should do what I need. I need Maximum Dimension = 2048px to resize all my pictures to about 1/4th of the original size. 

However the "Maximum Dimension" text-box won't allow me to enter anything greater than "999". Curiously, you can go greater than that by pushing the "up arrow" control, adding one pixel at a time.  

Please fix this so that I can enter any maximum size I need e.g. 2048.
Comment 1 caulier.gilles 2009-12-27 22:48:25 UTC
which kipi-plugins version you use ?

Gilles Caulier
Comment 2 Ar 2009-12-27 23:03:12 UTC
I am using the version that came with digikam 1.0.0RC1, details:


aptitude show kipi=plugins

Package: kipi-plugins
State: installed
Automatically installed: yes
Version: 0.9.0-1ubuntu1~karmic1
Priority: optional
Section: kde
Maintainer: Kubuntu Developers <kubuntu-devel@lists.ubuntu.com>
Uncompressed Size: 19.0M
Depends: kdebase-runtime (>= 4:4.3.2), kdelibs5 (>= 4:4.3.2), kdepimlibs5 (>=
         4:4.3.2), libc6 (>= 2.4), libexpat1 (>= 1.95.8), libgcc1 (>= 1:4.1.1),
         libgl1-mesa-glx | libgl1, libglib2.0-0 (>= 2.12.0), libglu1-mesa |
         libglu1, libgpod4 (>= 0.7.0), libgtk2.0-0 (>= 2.8.0), libice6 (>=
         1:1.0.0), libjpeg62, libkdcraw7 (>= 4:4.3.2), libkexiv2-7 (>= 4:4.3.2),
         libkipi6 (>= 4:4.3.2), libksane0 (>= 4:4.3.2), libpng12-0 (>=
         1.2.13-4), libqca2, libqt4-dbus (>= 4.5.1), libqt4-network (>= 4.5.1),
         libqt4-opengl (>= 4.5.1), libqt4-phonon (>= 4.5.1), libqt4-svg (>=
         4.5.1), libqt4-xml (>= 4.5.1), libqtcore4 (>= 4.5.1), libqtgui4 (>=
         4.5.1), libsm6, libstdc++6 (>= 4.1.1), libtiff4, libx11-6, libxau6,
         libxdmcp6, libxext6, libxft2 (> 2.1.1), libxml2 (>= 2.7.4), libxrandr2
         (>= 4.3), libxslt1.1 (>= 1.1.18), zlib1g (>= 1:1.1.4)
Recommends: imagemagick (>= 5.4.8) | graphicsmagick-imagemagick-compat (>=
            1.1.7), konqueror
Suggests: gallery, gimp, kmail, vorbis-tools
Replaces: digikamplugins
Description: image manipulation/handling plugins for KIPI aware programs
 KIPI plugins (KDE Image Plugin Interface) is an effort to develop a common
 plugin structure for Digikam, KPhotoAlbum (formerly known as KimDaBa), Showimg
 and Gwenview. Its aim is to share image plugins among graphic applications. 
 
 Current plugins ported to Qt4/KDE4: 
 
 AcquireImages      : acquire images using flat scanner
 AdvancedSlideShow  : Slide images with 2D and 3D effects using OpenGL
 Calendar           : create calendars
 DngConverter       : convert Raw Image to Digital NeGative
 Facebook           : import/export images to a remote Facebook web service
 FlashExport        : export images to Flash using SimpleViewer
 FlickrExport       : export images to a remote Flickr/23hq web service
 GalleryExport      : export images to a remote Gallery2 server
 GPSSync            : geolocalize pictures
 HTMLExport         : export images collections into a static XHTML
 ImageViewer        : preview images using OpenGL
 JpegLossLess       : rotate/flip images without losing quality
 MetadataEdit       : edit EXIF, IPTC and XMP metadata
 PicasaWebExport    : export images to a remote Picasa web service
 PrintImages        : print images in various format
 RawConverter       : convert Raw Image to JPEG/PNG/TIFF
 RemoveRedEyes      : remove red eyes on image automatically
 SendImages         : send images by e-mail
 Smug               : import/export images to a remote SmugMug web service
 TimeAdjust         : adjust date and time
 IpodExport         : export pictures to an Ipod device
 BatchProcess       : batch process images (convert, resize, rename, etc.)
 KIOExport          : export images to remote computer using network protocol
 Shwup              : export images to Shwup web service
 
 Porting under progress to Qt4/KDE4: 
 
 WallPaper          : set image as background on your desktop
 
 Not yet ported to Qt4/KDE4: 
 
 CDArchiving        : archive your image collections to a CD or DVD
 MpegEncoder        : create an MPEG slideshow with a set of images
Homepage: http://www.kipi-plugins.org/
Comment 3 Ar 2010-06-05 22:21:20 UTC
Just upgrade to ubuntu 10.04, which comes with digikam 1.2 / kipi-plugins 1.2.

The issue was partially addressed, we can now resize up to 1600px.There is no way to input numbers bigger than 1600.

Could we have any resize target up to and including 2048px? Or better still: up to 9999px...

Thanks!
Comment 4 caulier.gilles 2011-12-20 17:28:59 UTC
Ar,

This file still valid using kipi-plugins 2.4 ?

Gilles Caulier
Comment 5 Ar 2012-01-08 16:41:29 UTC
Yes - still valid
Comment 6 Andrew Goodbody 2012-03-27 08:29:35 UTC
Git commit 15acb5f9f54a393b3767aeb9e9f5fe6d1c9f16a0 by Andrew Goodbody.
Committed on 27/03/2012 at 10:21.
Pushed by goodbody into branch 'master'.

Increase limit for resize max dimension in Gallery exporter

The spin box to set the maximum dimension for the resize on upload was
set to an arbitrary value of 1600 which is too low for some users.
Increase this to another arbitrary limit of 3200.

M  +1    -1    galleryexport/gallerywindow.cpp

http://commits.kde.org/kipi-plugins/15acb5f9f54a393b3767aeb9e9f5fe6d1c9f16a0