Increase limit for resize max dimension in Gallery exporter

The spin box to set the maximum dimension for the resize on upload was
set to an arbitrary value of 1600 which is too low for some users.
Increase this to another arbitrary limit of 3200.

BUG: 220319